--- a/app/src/main/res/layout/activity_calories_searchview.xml
+++ b/app/src/main/res/layout/activity_calories_searchview.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context=".CaloriesSearchViewActivity">
 
+    <include
+        android:id="@+id/toolbarHeader"
+        layout="@layout/header"
+        />
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/caloriesSearchViewBar"
         android:layout_width="match_parent"
@@ -28,11 +33,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/food_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="568dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:nestedScrollingEnabled="true"
-        tools:listitem="@layout/calories_tracker_food_list"
-        />
+        tools:listitem="@layout/calories_tracker_food_list" />
 
 </LinearLayout>
