--- a/app/src/main/res/layout/activity_food_details.xml
+++ b/app/src/main/res/layout/activity_food_details.xml
@@ -6,12 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".FoodDetailsActivity">
 
+    <include
+        android:id="@+id/toolbarHeader"
+        layout="@layout/header" />
+
     <Button
         android:id="@+id/btnUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="Update"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/grey"
         app:layout_constraintEnd_toStartOf="@+id/btnDelete"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="Delete"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btnUpdate"
@@ -32,11 +40,10 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarHeader">
 
 
         <LinearLayout
@@ -46,17 +53,15 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="10dp"
-            android:orientation="horizontal"
-            android:weightSum="2"
             android:background="@drawable/searchview_bg"
-            >
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/grey"
-                >
+                android:background="@color/darkGreen">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -64,7 +69,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="Food ID"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="15sp" />
 
             </LinearLayout>
@@ -98,15 +103,15 @@
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:background="@drawable/searchview_bg"
             android:orientation="horizontal"
-            android:weightSum="2"
-            android:background="@drawable/searchview_bg">
+            android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/grey">
+                android:background="@color/darkGreen">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -114,7 +119,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="Food Name"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="15sp" />
 
             </LinearLayout>
@@ -122,8 +127,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.4"
-                >
+                android:layout_weight="1.4">
 
                 <TextView
                     android:id="@+id/tvFoodName"
@@ -148,16 +152,15 @@
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:orientation="horizontal"
-            android:weightSum="2"
             android:background="@drawable/searchview_bg"
-            >
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/grey">
+                android:background="@color/darkGreen">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -165,7 +168,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="Food Calories"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="15sp"
 
 
@@ -176,8 +179,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.4"
-                >
+                android:layout_weight="1.4">
 
                 <TextView
                     android:id="@+id/tvFoodCalories"
@@ -195,7 +197,6 @@
 
 
         </LinearLayout>
-
 
 
     </LinearLayout>
