--- a/app/src/main/res/layout/activity_update_food.xml
+++ b/app/src/main/res/layout/activity_update_food.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context=".UpdateFoodSearchActivity">
 
+    <include
+        android:id="@+id/toolbarHeader"
+        layout="@layout/header"
+        />
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/caloriesSearchViewBar"
         android:layout_width="match_parent"
@@ -28,7 +33,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/food_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="568dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:nestedScrollingEnabled="true"
