--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_primary_color"
-    android:padding="20dp">
+    android:padding="20dp"
+    tools:context=".SplashScreen"
+    >
 
     <TextView
         android:textAlignment="center"
@@ -20,17 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="20dp" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/login_sub_title"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:lineHeight="20sp"-->
-<!--        android:text="@string/sub_title"-->
-<!--        android:textColor="@color/black"-->
-<!--        android:textSize="14sp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        tools:layout_editor_absoluteY="69dp" />-->
+
 
     <ImageView
         android:id="@+id/img_illustration_started"
@@ -43,9 +35,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--Login Button -->
-
-    <!--Register Button -->
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_login"
