+Small Layout Fixes

--- a/app/src/main/res/layout/activity_calories_searchview.xml
+++ b/app/src/main/res/layout/activity_calories_searchview.xml
@@ -33,9 +33,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/food_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="568dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
+        android:layout_height="match_parent"
         android:nestedScrollingEnabled="true"
         tools:listitem="@layout/calories_tracker_food_list" />
 
