--- a/app/src/main/res/layout/activity_calories_option.xml
+++ b/app/src/main/res/layout/activity_calories_option.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NutritionOptionActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/calories_option_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <include
         android:id="@+id/toolbarHeader"
@@ -248,4 +252,5 @@
         app:layout_constraintTop_toBottomOf="@+id/custom_food_btn" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
