--- a/app/src/main/res/layout/fragment_water_tracker.xml
+++ b/app/src/main/res/layout/fragment_water_tracker.xml
@@ -84,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:text="Goal"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/goal_icon"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -166,7 +167,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="Drink some water!"/>
+                android:text="Drink some water!"
+                android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/water_records_recycler_view"
